--- a/src/scss/components/expert.scss
+++ b/src/scss/components/expert.scss
@@ -33,6 +33,7 @@
     }
 
     &__expert-title h3 {
+        opacity: 0;
         font: var(--title-M);
         color: #ffffff;
         max-width: 61rem;
