--- a/src/scss/global/_layout.scss
+++ b/src/scss/global/_layout.scss
@@ -58,6 +58,7 @@
 
 .animateTextWhite, .animateTextBlue, .animateTextBlack {
     opacity: 0;
+    user-select: none;
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
