--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -12,7 +12,7 @@
             <div class="intro__footer">
                 <div class="intro__buttons" data-aos="zoom-out-up"
      data-aos-easing="linear"
-     data-aos-duration="700">
+     data-aos-duration="700" data-aos-delay="1500">
                     
                         <a href="#callback-modal"class="intro__button-top button">
 
@@ -58,7 +58,9 @@
                 </div>
                 <div class="intro__ribbon aos-init"data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
-     data-aos-duration="2000">
+     data-aos-duration="2000"
+     data-aos-delay="3000">
+     
                     <p class="intro__ribbon-text">Лучшая альтернатива зарубежным аналогам</p>
                     <svg class="intro__ribbon-icon">
                         <use xlink:href="#rus-flag"></use>
