--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -14,6 +14,7 @@
     }
 
     &__title h2 {
+        opacity: 0;
         font: var(--title-L);
         font-size: calc(40px + (85 - 40) * (100vw - 360px) / (1680 - 360));
         width: 73%;
