--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -6,6 +6,11 @@
     z-index: 100;
     padding: 2rem 0;
     transition: 0.3s;
+    opacity: 0;
+
+    &.active {
+        opacity: 1;
+    }
 
     @media (max-width: 1439px) {
         padding: 1.7rem 0;
