--- a/src/scss/components/intro-slider.scss
+++ b/src/scss/components/intro-slider.scss
@@ -1,6 +1,12 @@
 .intro-slider {
   user-select: none;
   overflow: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+
+  &.active {
+    opacity: 1;
+  }
 
   &__slide {
     padding-top: 2.3rem;
