--- a/src/scss/components/order.scss
+++ b/src/scss/components/order.scss
@@ -35,6 +35,7 @@
         align-items: flex-end;
 
         h2 {
+            opacity: 0;
             font: var(--title-L);
             font-size: calc(40px + (85 - 40) * (100vw - 360px) / (1680 - 360));
         }
