--- a/src/scss/components/plants.scss
+++ b/src/scss/components/plants.scss
@@ -30,6 +30,7 @@
         }
     }
     h2 {
+        opacity: 0;
         font: var(--title-L);
         font-size: var(--calc--title-L);
         width: 69%;
