--- a/src/scss/components/expert.scss
+++ b/src/scss/components/expert.scss
@@ -2,6 +2,10 @@
     position: relative;
     padding-bottom: calc(53px + (100 - 53) * (100vw - 360px) / (1680 - 360));
 
+    @media (min-width: 1640px) {
+        padding-bottom: 80px;
+    }
+
     &__wrapper {
         background: url(../img/block_7.jpg);
         border-radius: 10px;
