--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -150,8 +150,8 @@
                 <div class="stats__img-wrapper">
                     <div class="stats__img-block">
                         <img class="stats__img stats-img-1" src="img/stat-1.png" alt="Фото преимущества">
-                        <img class="stats__img stats-img-2" src="img/stat-2.png" alt="Фото преимущества">
-                        <img class="stats__img stats-img-3" src="img/stat-3.png" alt="Фото преимущества">
+                        <img class="stats__img stats-img-2 stats-img-hide" src="img/stat-2.png" alt="Фото преимущества">
+                        <img class="stats__img stats-img-3 stats-img-hide" src="img/stat-3.png" alt="Фото преимущества">
                     </div>
                 </div>
 
