--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -2,6 +2,10 @@
     position: relative;
     padding-bottom: calc(53px + (100 - 53) * (100vw - 360px) / (1680 - 360));
     padding-top: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360));
+    
+    @media (min-width: 1640px) {
+        padding: 80px 0;
+    }
 
     &__wrapper {
         padding: 0 9.7rem 0 9.8rem;
