--- a/src/scss/components/characters.scss
+++ b/src/scss/components/characters.scss
@@ -2,6 +2,11 @@
     position: relative;
     padding-bottom: calc(53px + (100 - 53) * (100vw - 360px) / (1680 - 360));
     padding-top: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360));
+
+    @media (min-width: 1640px) {
+        padding: 80px 0;
+    }
+
     &__wrapper {
         padding: 9rem 9.7rem 9rem 9.8rem;
         background: #f0f4fe;
@@ -55,7 +60,7 @@
             gap: 25%;
         }
         @media (max-width: 1057px) {
-            gap: 20%;
+            gap: 15%;
         }
         @media (max-width: 1000px) {
             gap: 20%;
