--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -1,7 +1,10 @@
 .configure {
     width: 100%;
-    // min-height: 100vh;
     padding-bottom: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360));
+
+    @media (min-width: 1640px) {
+        padding-bottom: 80px;
+    }
 
     &__wrapper {
         display: grid;
@@ -13,6 +16,11 @@
         border-radius: 1rem;
         color: #fff;
         overflow: hidden;
+
+        @media (min-width: 1640px) {
+            padding: 90px 98px;
+        }
+
         @media (max-width: 1327px) {
             padding: 10.5rem 3.7rem 7.7rem;
             @media (max-width: 600px) {
@@ -57,8 +65,7 @@
 
     &__graphic {
         width: 100%;
-        max-width: 84.4rem;
-        aspect-ratio: 844 / 395;
+        aspect-ratio: 2 / 1;
         @media (max-width: 1445px) {
             width: 96%;
         }
@@ -583,7 +590,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 2.3rem 2.5rem 2rem;
+        padding: 2.5rem 2.5rem 2rem;
         @media (max-width: 500px) {
             font-size: 2rem;
             padding: 1rem 2.5rem;
@@ -610,6 +617,73 @@
 
     .configCar {
         position: relative;
+        top: -15%;
+        pointer-events: none;
+
+        @media (max-width: 1500px) {
+            top: -15%; 
+        }
+
+        @media (max-width: 1100px) {
+            top: -10%;
+        }
+
+        @media (max-width: 958px) {
+            top: 0;
+        }
+
+        @media (max-width: 600px) {
+            top: -13%;
+        }
+
+        @media (max-width: 500px) {
+            top: -10%;
+        }
+
+        & svg[data-car="uaz"] {
+            width: 126%;
+            left: -10%;
+
+            @media (max-width: 1500px) {
+                width: 115%;
+                left: -8%;
+            }
+
+            @media (max-width: 1100px) {
+                left: -4%;
+            }
+
+            @media (max-width: 958px) {
+                width: 130%;
+            }
+
+            @media (max-width: 600px) {
+                width: 120%;
+                left: -6%;
+            }
+        }
+
+        & svg[data-car="isuzu"] {
+            width: 127%;
+            left: -20%;
+
+            @media (max-width: 1500px) {
+                width: 115%;
+                left: -13%;
+            }
+
+            @media (max-width: 958px) {
+                width: 135%;
+                left: -13%;
+            }
+
+            @media (max-width: 600px) {
+                width: 120%;
+                left: -14%;
+            }
+        }
+
+
 
         .configure__graphic {
             position: absolute;
