--- a/src/scss/components/gallery.scss
+++ b/src/scss/components/gallery.scss
@@ -1,5 +1,9 @@
 .gallery {
     padding: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360)) 0;
+
+    @media (min-width: 1640px) {
+        padding: 80px 0;
+    }
 }
 
 .gallery__wrapper {
@@ -104,6 +108,11 @@
             font-size: calc(18px + (30 - 18) * (100vw - 360px) / (1680 - 360));
             width: 50%;
             padding-bottom: 10px;
+
+            @media (min-width: 1640px) {
+                font-size: 30px;
+            }
+
             @media (max-width: 1179px) {
                 width: unset;
             }
@@ -117,7 +126,7 @@
         display: flex;
         justify-content: flex-end;
         flex-direction: column;
-        padding: 0.75rem 1.25rem;
+        padding: 1.25rem 1.25rem;
         height: 100%;
     }
 }
