--- a/src/scss/components/order.scss
+++ b/src/scss/components/order.scss
@@ -1,15 +1,22 @@
 .order {
     padding: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360)) 0;
+
+    @media (min-width: 1641px) {
+        padding: 80px 0;
+    }
+    
 }
 .wide-container {
 }
 .order__inner {
     background-image: url(../img/block_911.jpg);
-    padding: 9rem 9.8rem;
     padding: calc(25px + (90 - 25) * (100vw - 360px) / (1680 - 360)) calc(20px + (98 - 20) * (100vw - 360px) / (1680 - 360));
     border-radius: 10px;
     background-size: cover;
     background-repeat: no-repeat;
+    @media (min-width: 1640px) {
+        padding: 90px 98px;
+    }
      @media (max-width: 500px) {
             border-radius: 5px;
         }
@@ -17,6 +24,9 @@
         font: var(--body-XL);
         font-family: var(--main-ff);
         padding-top: calc(20px + (75 - 20) * (100vw - 360px) / (1680 - 360));
+        @media (min-width: 1640px) {
+            padding-top: 85px;
+        }
         @media (max-width: 767px) {
             // flex-direction: column-reverse;
             width: 73%;
@@ -34,6 +44,10 @@
         gap: calc(25px + (100 - 25) * (100vw - 360px) / (1680 - 360));
         align-items: flex-end;
 
+        @media (min-width: 1640px) {
+            gap: 100px;
+        }
+
         h2 {
             opacity: 0;
             font: var(--title-L);
@@ -45,6 +59,11 @@
         display: flex;
         justify-content: space-between;
         gap: calc(50px + (142 - 50) * (100vw - 360px) / (1680 - 360));
+
+        @media (min-width: 1640px) {
+            gap: 160px;
+        }
+
         @media (max-width: 1280px) {
             gap: 4rem;
         }
@@ -149,47 +168,35 @@
             }
         }
     }
-    &-main-item:nth-child(1)::before {
-        content: '';
-        position: absolute;
-        background-image: url(../img/11.webp);
-        background-repeat: no-repeat;
-        top: 20%;
-        transform: translate(-50%, -50%);
-        left: 60%;
-        max-width: 14vw;
-        width: 100%;
-        height: 14vw;
-        background-size: contain;
-        z-index: 2;
-    }
-    &-main-item:nth-child(2)::before {
-        content: '';
-        position: absolute;
-        background-image: url(../img/22.webp);
-        background-repeat: no-repeat;
-        top: 20%;
-        transform: translate(-50%, -50%);
-        left: 60%;
-        max-width: 14vw;
-        width: 100%;
-        height: 14vw;
-        background-size: contain;
-        z-index: 2;
-    }
+
+    &-main-item:nth-child(1)::before,
+    &-main-item:nth-child(2)::before,
     &-main-item:nth-child(3)::before {
         content: '';
         position: absolute;
-        background-image: url(../img/33.webp);
         background-repeat: no-repeat;
         top: 20%;
         transform: translate(-50%, -50%);
-        left: 60%;
+        left: 61%;
         max-width: 14vw;
         width: 100%;
         height: 14vw;
         background-size: contain;
         z-index: 2;
+
+        @media (min-width: 1640px) {
+            height: 250px;
+        }
+    }
+
+    &-main-item:nth-child(1)::before {
+        background-image: url(../img/11.webp);
+    }
+    &-main-item:nth-child(2)::before {
+        background-image: url(../img/22.webp);
+    }
+    &-main-item:nth-child(3)::before {
+        background-image: url(../img/33.webp);
     }
     @media (max-width: 767px) {
         .order__inner-main-item:nth-child(1)::before {
