--- a/src/scss/components/stats.scss
+++ b/src/scss/components/stats.scss
@@ -1,11 +1,11 @@
 .stats {
     display: flex;
     width: 100%;
-    min-height: 100vh;
     padding-top: 16rem;
     padding-bottom: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360));
-     @media (min-width: 1921px) {
-        padding-bottom: 0;
+
+     @media (min-width: 1640px) {
+        padding-bottom: 40px;
     }
 
     @media (max-width: 1245px) {
@@ -81,35 +81,22 @@
         }
     }
 
-    &__img-block {
-        position: absolute;
-        top: 0;
-        left: 0;
+    &__img {
 
-        width: 100%;
-        height: var(--img-block-height);
-        background-color: #fff;
-
-        @media (max-width: 960px) {
-            bottom: 100%;
-            top: auto;
+        transition: opacity 0.5s ease-in-out;
+        &.stats-img-2 {
+            margin-top: 106px;
         }
+
+        &.stats-img-3 {
+            margin-top: 77px;
+        }
+
     }
 
-    &__img {
-        position: absolute;
-        left: 0;
-        top: 0;
-        &:not(:first-child) {
-            opacity: 0;
-        }
-
-        @media (max-width: 960px) {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            top: auto;
-        }
+    &-img-hide {
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
     }
 
     &__item {
