--- a/src/pages/contacts.hbs
+++ b/src/pages/contacts.hbs
@@ -2,7 +2,7 @@
 {{#content "main"}}
 
 <section class="contact__form">
- {{> form }}
+ {{> formContacts }}
  </section>
 <section class="map ">
     <div class="wide-container">
