--- a/src/scss/components/callback.scss
+++ b/src/scss/components/callback.scss
@@ -7,6 +7,10 @@
         padding-bottom: 80px;
     }
 
+    &__contacts{
+        color: #0F1926;
+    }
+
     &__wrapper {
         background: #2f83eb;
         border-radius: 10px;
@@ -21,6 +25,10 @@
             padding: 2.5rem 2rem;
             border-radius: 5px;
         }
+    }
+
+    &__wrapper__contacts {
+        background: #F4F8FE;
     }
 
     &__content-container {
@@ -40,13 +48,25 @@
         }
     }
 
-    &__content-container__first {
+    &__content-container__first, &__content-container__first__contacts {
         display: flex;
         flex-direction: column;
     }
 
     &__content-container__first h2 {
         opacity: 0;
+        font: var(--title-L);
+        font-size: calc(40px + (85 - 40) * (100vw - 360px) / (1680 - 360));
+        @media (min-width: 1681px) {
+            font-size: 8.5rem;
+        }
+        @media (max-width: 550px) {
+            width: 17rem;
+        }
+    }
+
+    &__content-container__first__contacts h2 {
+        color: #0F1926;
         font: var(--title-L);
         font-size: calc(40px + (85 - 40) * (100vw - 360px) / (1680 - 360));
         @media (min-width: 1681px) {
@@ -71,9 +91,38 @@
         }
     }
 
+    &__content-container__first__contacts a {
+        font: var(--title-S-narrow);
+        font-size: calc(25px + (40 - 25) * (100vw - 360px) / (1680 - 360));
+        padding-top: 19.5rem;
+
+        @media (min-width: 1640px) {
+            font-size: 40px;
+        }
+
+        @media (max-width: 1040px) {
+            display: none;
+        }
+        
+        &:hover{
+            color: var(--accent-primary-hover);
+        }
+    }
+
     &__content-container__first p {
         font: var(--body-S);
         color: #ffffff;
+        opacity: 0.5;
+        padding-top: 4.7rem;
+
+        @media (max-width: 1040px) {
+            display: none;
+        }
+    }
+
+    &__content-container__first__contacts p {
+        font: var(--body-S);
+        color: #0F1926;
         opacity: 0.5;
         padding-top: 4.7rem;
 
@@ -93,6 +142,13 @@
         @media (max-width: 440px) {
             gap: 2rem;
         }
+    }
+
+    &__content-container__second-mobile__contacts {
+       color: #1B74E3;
+       :hover{
+           color: var(--accent-primary-hover);
+       }
     }
 
     &__content-container__second-expert-name {
@@ -124,6 +180,10 @@
             padding: 0.85rem 1.5rem 0.85rem 1rem;
             gap: 0.5rem;
         }
+    }
+
+    .work-now__contacts {
+        background: rgba(27, 116, 227, 0.1);
     }
 
     .work-now svg {
@@ -270,6 +330,15 @@
         }
     }
 
+    &__content-container__second-callback__contacts form input {
+        border: 1px solid #A3AFCD;
+        color: #A3AFCD;
+        &::placeholder {
+            color: #A3AFCD;
+        }
+    }
+
+
     &__content-container__second-callback form .callback__item:hover label {
         font-size: 1.6rem;
         font-weight: 700;
@@ -277,6 +346,11 @@
         background-color: #2f83eb;
         padding: 0 3px;
         transform: translateY(0%);
+    }
+
+    &__content-container__second-callback__contacts form .callback__item:hover label {
+
+        background-color: #F4F8FE;
     }
 
     &__item {
@@ -305,6 +379,10 @@
         }
     }
 
+    &__content-container__second-callback__contacts form label {
+        color: #A3AFCD;
+    }
+
     &__content-container__second-callback form a {
         border: 1px solid #fff;
         padding: 2.075rem 2.5rem 1.875rem 2.5rem;
@@ -328,6 +406,18 @@
 
         @media (max-width: 560px) {
             width: 100%;
+        }
+    }
+
+    &__content-container__second-callback__contacts form a {
+        border: 1px solid #1b74e3;
+        color: #fff;
+        background-color: #1b74e3;
+        padding: 2.75rem 2.5rem 2.3rem;
+        &:hover{
+            background-color: var(--accent-primary-hover);
+            border: 1px solid var(--accent-primary-hover);
+            color: #fff;
         }
     }
 
@@ -435,5 +525,46 @@
         left: 2.5rem;
         top: 50%;
         transform: translateY(-50%);
+    }
+
+    &__content-container__second-callback__contacts{
+        input:required + label {
+
+            background-color: #F4F8FE;
+        }
+    
+        input:invalid + label {
+            color: #A3AFCD;
+        }
+    
+        .expert__agree-text a {
+            border-bottom: 1px solid #A3AFCD;
+            color: #A3AFCD;
+        }
+    
+        input:required + label {
+            background-color: #F4F8FE;
+        }
+    
+        input:invalid + label {
+            color: #A3AFCD;
+        }
+    }
+
+    .expert__agree__contacts{
+        color: #A3AFCD;
+    }
+        
+
+    &__socials{
+        display: flex;
+        gap: 22px;
+        align-items: center;
+        margin-top: 14px;
+    }
+
+    &__social a:hover svg path{
+        fill: var(--accent-primary-hover);
+
     }
 }
