--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -209,9 +209,10 @@
                 <a data-fancybox href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5">
                 {{> billet }}
                 </a>
-                <span class="overview__video-description">
-                    Видеообзор эксперта <sup>9 минут</sup>
-                </span>
+                <div class="overview__video-description">
+                    <span>Видеообзор эксперта</span>
+                    <span class="overview__video-description-smallTitle">9 минут</span>
+                </div>
             </div>
         </div>
     </div>
