--- a/src/partials/components/form.hbs
+++ b/src/partials/components/form.hbs
@@ -1,4 +1,4 @@
-<div class='callback aos-init' data-aos='fade-up' data-aos-duration='700'>
+<div class='callback'>
     <div class='wide-container'>
         <div class='callback__wrapper'>
             <div class='callback__content-container'>
