--- a/src/partials/components/formContacts.hbs
+++ b/src/partials/components/formContacts.hbs
@@ -1,4 +1,4 @@
-<div class='callback aos-init callback__contacts' data-aos='fade-up' data-aos-duration='700'>
+<div class='callback callback__contacts'>
     <div class='wide-container'>
         <div class='callback__wrapper callback__wrapper__contacts'>
             <div class='callback__content-container'>
