--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -78,6 +78,10 @@
         @media (max-width: 958px) {
             grid-column: span 7;
         }
+
+        @media (max-width: 600px) {
+            width: 100%;
+        }
     }
 
     &__tabs {
@@ -186,9 +190,30 @@
         gap: 2rem;
         flex-grow: 1;
         display: none;
+        min-height: 520px;
+
+        @media (max-width: 1300px) {
+            min-height: 540px;
+        }
+
+        @media (max-width: 1200px) {
+            min-height: 550px;
+        }
+
+        @media (max-width: 1025px) {
+            min-height: 605px;
+        }
         
         @media (max-width: 800px) {
-            max-width: 266px;
+            min-height: 580px;
+        }
+
+        @media (max-width: 600px) {
+            min-height: 512px;
+        }
+
+        @media (max-width: 400px) {
+            min-height: 420px;
         }
     }
 
@@ -546,7 +571,6 @@
         display: flex;
         flex-direction: column;
         gap: 3.5rem;
-        margin-top: 135px;
 
         @media (max-width: 800px) {
             margin-top: 30px;
@@ -641,7 +665,7 @@
         }
 
         & svg[data-car="uaz"] {
-            width: 126%;
+            width: 115%;
             left: -10%;
 
             @media (max-width: 1500px) {
@@ -650,22 +674,29 @@
             }
 
             @media (max-width: 1100px) {
+                width: 110%;
                 left: -4%;
             }
 
             @media (max-width: 958px) {
-                width: 130%;
+                width: 115%;
+                left: -10%;
+            }
+
+            @media (max-width: 800px) {
+                width: 112%;
+                left: -1%;
             }
 
             @media (max-width: 600px) {
-                width: 120%;
+                width: 110%;
                 left: -6%;
             }
         }
 
         & svg[data-car="isuzu"] {
-            width: 127%;
-            left: -20%;
+            width: 112%;
+            left: -9%;       
 
             @media (max-width: 1500px) {
                 width: 115%;
@@ -673,13 +704,18 @@
             }
 
             @media (max-width: 958px) {
-                width: 135%;
-                left: -13%;
+                width: 115%;
+                left: -8%;
+            }
+
+            @media (max-width: 800px) {
+                width: 105%;
+                left: -1%;
             }
 
             @media (max-width: 600px) {
-                width: 120%;
-                left: -14%;
+                width: 110%;
+                left: -7%;
             }
         }
 
