--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -278,7 +278,7 @@
                         </div>
                     </li>
                 </ul>
-                <form autocomplete="off" data-config="configUaz" class="configure__form tab-content_show">
+                <form id="form_main_configurator_uaz" autocomplete="off" data-config="configUaz" class="configure__form tab-content_show">
                     <div class="configure__form-fields">
                         <fieldset class="configure__form-group configure__form-group-chosen">
                             <h3 class="configure__form-group-title">Выбранное оборудование</h3>
@@ -388,7 +388,7 @@
                         </button>
                     </div>
                 </form>
-                 <form autocomplete="off" data-config="configIsuzu" class="configure__form">
+                 <form id="form_main_configurator_isuzu"  autocomplete="off" data-config="configIsuzu" class="configure__form">
                     <div class="configure__form-fields">
                         <fieldset class="configure__form-group configure__form-group-chosen">
                             <h3 class="configure__form-group-title">Выбранное оборудование</h3>
@@ -787,7 +787,7 @@
                 <div class="expert__expert-title">
                     <h3>получите консультацию нашего эксперта</h3>
                 </div>
-                <form id="form" data-parsley-focus="none" data-need-validation>
+                <form id="form_main_consultation" data-parsley-focus="none" data-need-validation>
                     <div class="expert__item">
                         <input type="text" required id="name" data-parsley-name ><label for="name">Ваше имя</label>
                     </div>
@@ -851,7 +851,7 @@
                         <img src="./img/img7.png" alt="" />
                         <div class="gallery__wrapper-item-text">
                             <p>Перейти в медиагалерею</p>
-                            <span>Более 30 фото<br>и видео материалов</sp>
+                            <span>Более 30 фото<br>и видео материалов</span>
                         </div>
                     </a>
                 </div>
@@ -1403,7 +1403,7 @@
                                     fill="#A3AFCD" />
                             </svg>
                         </div>
-                        <div class="characters_block-item aos-init"data-aos="zoom-in"data-aos-duration="1000" data-aos-delay="1100">
+                        <div class="characters_block-item aos-init" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="1100">
                             <div class="characters_block-item-title">
                                 29 000 м²
                             </div>
