--- a/src/pages/media.hbs
+++ b/src/pages/media.hbs
@@ -237,12 +237,12 @@
                 Заполните форму и наш менеджер свяжется с вами в ближайшее время </div>
         </div>
 
-        <form id="form"  data-parsley-focus="none" data-need-validation>
+        <form id="form_media"  data-parsley-focus="none" data-need-validation>
             <div class="expert__item">
-                <input data-options='{"autoFocus" : false}' type="text" required id="name3" data-parsley-name><label for="name">Ваше имя</label>
+                <input data-options='{"autoFocus" : false}' type="text" required id="name3" data-parsley-name><label for="name3">Ваше имя</label>
             </div>
             <div class="expert__item">
-                <input class="phone js-phone-input" required id="phone3" type="tel" data-parsley-phone><label for="name">ваш
+                <input class="phone js-phone-input" required id="phone3" type="tel" data-parsley-phone><label for="phone3">ваш
                     телефон</label>
             </div>
             <button class="button" type="submit"data-fancybox data-src="#thanks_manager">Отправить
