--- a/src/partials/components/formContacts.hbs
+++ b/src/partials/components/formContacts.hbs
@@ -106,12 +106,12 @@
                     </div>
                     <div class='callback__content-container__second-callback callback__content-container__second-callback__contacts'>
                         <p>Закажите звонок</p>
-                        <form action='' data-parsley-focus='none' data-need-validation>
+                        <form  id="form_call_contacts" data-parsley-focus='none' data-need-validation>
                             <div class='callback__item'>
                                 <input required type='text' id='name1' data-parsley-name /><label for='name1'>Ваше имя</label>
                             </div>
                             <div class='callback__item'>
-                                <input class='phone js-phone-input' required type='tel' id='name2' data-parsley-phone /><label for='name2'>ваш телефон</label>
+                                <input class='phone js-phone-input' required type='tel' id='phone1' data-parsley-phone /><label for='phone1'>ваш телефон</label>
                             </div>
                             <button type='submit'>
                                 <a href='#success-modal' class='button--light'>Отправить
