--- a/src/scss/components/callback.scss
+++ b/src/scss/components/callback.scss
@@ -157,6 +157,10 @@
 
     &__content-container__second-expert-avatar {
         border-radius: 50%;
+        width: 150px;
+        height: 150px;
+        overflow: hidden;
+        
 
         @media (max-width: 440px) {
             width: 75px;
