add container for image

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1989,21 +1989,23 @@
             <div class="reviews__inner-slider swiper">
             <div class="reviews__inner_items swiper-wrapper">
                 <div class="reviews__inner_item swiper-slide autoheight">
-                    <a class="reviews__inner_item_video" id="">
+                    <div class="reviews__inner_wrapper">
+                         <a class="reviews__inner_item_video" id="">
                         <picture>
                             <source srcset="./img/billet.jpg" type="image/webp">
                             <img class="video__media" alt=" —  / " data-ll-status="loaded" src="">
                         </picture>
                     </a>
+                    </div>
                     <div class="reviews__inner_item-title">Отличная модель для российских условий</div>
                     <p>Менеджер компании погрузился в суть вопроса и подобрал нам идеальную конфигурацию! Сотрудники компании высоко-квалифицированны и полностью оправдывают ожидания.</p>
                     <strong>Алишер Нуриев</strong>
                     <span>Директор «Слобода арена», пос. Рыбная слобода</span>
                 </div>
                 <div class="reviews__inner_item swiper-slide autoheight">
-                 
-                      <img src="./img/1.png"class="reviews__inner_item-img" alt="">
-                
+                    <div class="reviews__inner_wrapper">
+                      <img src="./img/1.png" class="reviews__inner_item-img" alt="">
+                    </div>
                     <div class="reviews__inner_item-title">Идеальна для заливки арены хоккея с мячом</div>
                     <p>Менеджер компании погрузился и подобрал лучшую конфигурацию, которая актуальна не толкьо в зимний период, но и летом. Огромная благодарность за столь уникальную модель!</p>
                     <strong>Олег Петров</strong>
@@ -2011,21 +2013,23 @@
                         г. Казань</span>
                 </div>
                 <div class="reviews__inner_item swiper-slide autoheight">
-       
-                   <img src="./img/cover.png"class="reviews__inner_item-img" alt="">
-                  
+                    <div class="reviews__inner_wrapper">
+                        <img src="./img/cover.png" class="reviews__inner_item-img" alt="">
+                    </div>
                     <div class="reviews__inner_item-title">Очень вместительная и производительная модель!</div>
                     <p>Подбирали модель для заливки на открытых катках, к нашему удивлению эта машина способна обрабатывать по 30 катков в день. Думаю это не предел, будем бить рекорды!</p>
                     <strong>Давид Нургалиев</strong>
                     <span>Директор «Ледовый дворец», г. Набережные Челны</span>
                 </div>
                 <div class="reviews__inner_item swiper-slide autoheight">
-                    <a class="reviews__inner_item_video" id="">
-                        <picture>
-                            <source srcset="./img/3.png" type="image/webp">
-                            <img class="video__media" alt=" —  / " data-ll-status="loaded" src="">
-                        </picture>
-                    </a>
+                    <div class="reviews__inner_wrapper">
+                        <a class="reviews__inner_item_video" id="">
+                            <picture>
+                                <source srcset="./img/3.png" type="image/webp">
+                                <img class="video__media" alt=" —  / " data-ll-status="loaded" src="">
+                            </picture>
+                        </a>
+                    </div>
                     <div class="reviews__inner_item-title">Отличная модель для российских условий</div>
                     <p>Менеджер компании погрузился в суть вопроса и подобрал нам идеальную конфигурацию! Сотрудники компании высоко-квалифицированны и полностью оправдывают ожидания.</p>
                     <strong>Алишер Нуриев</strong>
