add image in characters

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -905,7 +905,8 @@
 
                     <div class="characters__tab-item tab-content_show">
 
-                        <div class="characters_block-item aos-init"data-aos="zoom-in"data-aos-duration="1000" data-aos-delay="300">
+                        <img src="img/characters__image-isuzu.png" alt="">
+                        {{!-- <div class="characters_block-item aos-init"data-aos="zoom-in"data-aos-duration="1000" data-aos-delay="300">
                             <div class="characters_block-item-title">
                                 3 м
                             </div>
@@ -1428,11 +1429,11 @@
                                 бункер
                                 для снега
                             </div>
-                        </div>
+                        </div> --}}
                     </div>
                     <div class="characters__tab-item">
-
-                        <div class="characters_block-item">
+                        <img src="img/characters__image-isuzu.png" alt="">
+                        {{!-- <div class="characters_block-item">
                             <div class="characters_block-item-title">
                                 3 м
                             </div>
@@ -1955,7 +1956,7 @@
                                 бункер
                                 для снега
                             </div>
-                        </div>
+                        </div> --}}
                         
                     </div>
                     <div class="characters__buttons-container">
