--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -18,6 +18,7 @@
     --max-wide-container-width: 155rem;
     --max-container-width: 135.5rem;
     --content-padding: 3rem;
+    --content-mobile-padding: 1.5rem;
 
     /* Font Family */
     --main-ff: 'BebasNeue';
