--- a/src/scss/components/characters.scss
+++ b/src/scss/components/characters.scss
@@ -6,6 +6,7 @@
     @media (min-width: 1640px) {
         padding: 80px 0;
     }
+     
 
     &__wrapper {
         padding: 9rem 9.7rem 9rem 9.8rem;
@@ -453,3 +454,21 @@
         text-align: center;
     }
 }
+
+.hidden-m{
+    display: none;
+    width: 100%;
+    margin: 25px 0;
+    @media (max-width: 1000px) {
+        display: block;
+    }
+}
+
+.hidden-d{
+    display: block;
+
+    @media (max-width: 1000px) {
+        display: none;
+    }
+}
+
