--- a/src/scss/components/gallery.scss
+++ b/src/scss/components/gallery.scss
@@ -141,10 +141,13 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        border-radius: 10px;
     }
     .swiper-slide {
         opacity: 0;
+        max-width: 96%;
+    max-height: 195px;
+    overflow: hidden;
+    border-radius: 10px;
     }
     .swiper-slide-next {
         opacity: 0.5;
@@ -161,9 +164,9 @@
         opacity: 1;
     }
     .swiper-slide {
-        width: 90% !important;
-        @media (max-width: 500px) {
-            width: 10%;
+         width: 90% !important;
+        @media (max-width: 499px) {
+            width: 100% !important;
         }
     }
     .swiper-wrapper {
@@ -171,6 +174,7 @@
         @media (max-width: 500px) {
             width: 100%;
             margin: 0 auto;
+            margin-left: 0!important;
         }
     }
 }
