--- a/src/scss/global/_layout.scss
+++ b/src/scss/global/_layout.scss
@@ -7,6 +7,12 @@
         padding-left: max(env(safe-area-inset-left, 1.4rem), var(--content-padding));
         padding-right: max(env(safe-area-inset-right, 1.4rem), var(--content-padding));
     }
+    @media (max-width: 499px) {
+        @supports (width: max(20vw, 100px)) {
+            padding-left: max(env(safe-area-inset-left, 1.4rem), var(--content-mobile-padding));
+            padding-right: max(env(safe-area-inset-right, 1.4rem), var(--content-mobile-padding));
+        }
+    }
 }
 
 .wide-container {
@@ -41,7 +47,6 @@
     font: var(--title-XL);
     color: #fff;
     text-transform: uppercase;
-    text-shadow: 0 4px 50px rgba(21, 36, 90, 0.25);
 }
 
 .animateTextWhite {
