--- a/src/scss/components/overview.scss
+++ b/src/scss/components/overview.scss
@@ -31,6 +31,7 @@
         @media (max-width: 910px) {
             justify-content: center;
             align-items: flex-start;
+            aspect-ratio: auto;
         }
     }
 
