--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -988,8 +988,11 @@
                             <img src="img/image.png" alt=""></a>
 
                        <a href="#callback-doc"class="characters__button second button--light aos-init"data-aos="fade-up-left"data-aos-duration="1000">
-                           Техническая документация 
+                           <span class="hidden-d">Техническая документация </span> 
+                           <span class="hidden-m">Тех. документация </span> 
                             <img src="img/document.png" alt=""></a>
+
+                        
                       
                        
                     </div>
